--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,19 +4,23 @@
     "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
      "declaration": true,                   /* Generates corresponding '.d.ts' file. */
      "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
+     "rootDir" : "./src",
      "outDir": "./lib",                        /* Redirect output structure to the directory. */
      "removeComments": true,                /* Do not emit comments to output. */
     "strict": true,                           /* Enable all strict type-checking options. */
-     "noImplicitAny": true,                 /* Raise error on expressions and declarations with an implied 'any' type. */
+     "noImplicitAny": false,                 /* Raise error on expressions and declarations with an implied 'any' type. */
      "strictNullChecks": true,              /* Enable strict null checks. */
      "noImplicitThis": true,                /* Raise error on 'this' expressions with an implied 'any' type. */
      "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-    "esModuleInterop": true,                  /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
+    "esModuleInterop": true                  /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
   },
   "include" : [
-    "./src/**/*"
+    "./src/**/*",
+    "./types/**/*"
+
   ],
   "exclude": [
-    "./lib/**/*"
+    "./lib/**/*",
+    "./test/__fixtures__"
   ]
 }
