--- a/js-with-effects-tmbundle/package.json
+++ b/js-with-effects-tmbundle/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "javascript",
+  "name": "js-with-effects",
   "displayName": "%displayName%",
   "description": "%description%",
   "version": "1.0.0",
