Let There Be Effects
* Examples are _still_ broken.
* Unclear about nesting still, but we're making progress
* runProgram is _truly_ async, values returned from runProgram *actually* resolve
* A lot of other cool things: functional tests & functional test runner

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Algebraic Effects For Javascript 🎉",
   "main": "lib/index.js",
   "scripts": {
-    "build:example" : "./babel/packages/babel-cli/bin/babel.js ./examples/src/ --out-dir ./examples/dist/",
+    "build:example": "./babel/packages/babel-cli/bin/babel.js ./examples/src/ --out-dir ./examples/dist/",
     "build:source": "run-s clean compile",
-    "build" : "run-s build:source build:example",
+    "build": "run-s build:source build:example",
     "clean": "rm -rf ./lib || true",
     "compile": "tsc",
     "fixup": "prettier --write ./{test,src}/**/*.{js,ts}",
@@ -30,6 +30,7 @@
     "babel-plugin-tester": "^8.0.1",
     "babel-test": "^0.2.3",
     "jest": "^24.9.0",
+    "node-eval": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "ts-jest": "^24.2.0",
