--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "bootstrap": "npm install && npx lerna bootstrap --loglevel verbose",
-    "build": "tsc -b packages",
+    "build:compile": "",
+    "build": "tsc -b packages && lerna exec --scope effects-docs -- npm run build",
     "clean": "del 'packages/*/lib' 'packages/*/*.{tsbuildinfo}' 'packages/*/src/**/*.{map,d.ts}'",
     "test": "lerna exec npm run test",
     "format": "prettier --write ./packages/*/{test,src}/**/*.{js,ts}"
