chore(ci): init

--- a/packages/effects-docs/package.json
+++ b/packages/effects-docs/package.json
@@ -13,6 +13,7 @@
     "build": "pug src",
     "serve": "httpster -d src",
     "build:watch": "pug -w src",
-    "start": "run-p serve build:watch"
+    "start": "run-p serve build:watch",
+    "test": "echo skipped"
   }
 }
