--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dpchamps/effectsjs.git"
+    "url": "git+https://github.com/effectsjs/effectsjs.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/dpchamps/effectsjs/issues"
+    "url": "https://github.com/effectsjs/effectsjs/issues"
   },
-  "homepage": "https://github.com/dpchamps/effectsjs#readme",
+  "homepage": "https://github.com/effectsjs/effectsjs#readme",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
