feat: gatsby-ify

--- a/packages/effects-docs/package.json
+++ b/packages/effects-docs/package.json
@@ -3,25 +3,34 @@
   "version": "0.0.1",
   "author": "cdaringe <cdaringe@gmail.com>",
   "license": "MIT",
-  "devDependencies": {
-    "babel-loader": "^8.0.6",
-    "httpster": "^1.0.4",
-    "jstransformer-markdown-it": "^2.1.0",
-    "npm-run-all": "^4.1.5",
-    "pug-cli": "^1.0.0-alpha6",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
+  "dependencies": {
+    "ace-builds": "^1.4.8",
+    "babel-plugin-effects": "^0.0.1",
     "effects-runtime": "^0.0.1",
-    "babel-plugin-effects": "^0.0.1"
+    "gatsby-image": "2.2.41",
+    "gatsby-plugin-google-fonts":"^1.0.1",
+    "gatsby-plugin-react-helmet": "3.1.22",
+    "gatsby-plugin-sharp": "2.4.5",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "1.1.8",
+    "gatsby-source-filesystem": "2.1.48",
+    "gatsby-transformer-remark": "2.6.53",
+    "gatsby-transformer-sharp": "2.3.14",
+    "gatsby": "2.19.22",
+    "npm-run-all": "^4.1.5",
+    "react-ace":"^8.0.0",
+    "react-dom": "^16.12.0",
+    "react-helmet": "5.2.1",
+    "react-highlight.js": "^1.0.7",
+    "react-markdown": "^4.3.1",
+    "react": "^16.12.0"
   },
   "scripts": {
-    "build:effects-runtime": "webpack --config webpack.effects.runtime.js",
-    "build:babel:standalone": "cp ../../babel/packages/babel-standalone/babel.js effectsjs/",
-    "build:pug": "pug effectsjs",
-    "build": "run-s build:pug build:babel:standalone",
-    "serve": "httpster",
-    "build:pug:watch": "pug -w effectsjs",
-    "start": "run-p serve build:pug:watch build:*",
+    "build:babel:standalone": "cp ../../babel/packages/babel-standalone/babel.js static/",
+    "prebuild": "node scripts/reduce-highlight.js",
+    "build": "run-s build:babel:standalone && gatsby build --prefix-paths",
+    "clean": "gatsby clean",
+    "serve": "gatsby serve",
+    "start": "run-s build:babel:standalone && gatsby develop",
     "test": "echo skipped"
   }
 }
