--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "scripts": {
     "bootstrap": "npm install && npx lerna bootstrap --loglevel verbose",
+    "postbootstrap": "run-s copy:nvmrc",
+    "copy:nvmrc": "lerna exec -- cp ../../.nvmrc ./",
     "build": "tsc -b packages && lerna exec --scope effects-docs -- npm run build",
     "clean": "del 'packages/*/lib' 'packages/*/*.{tsbuildinfo}' 'packages/*/src/**/*.{map,d.ts}'",
     "format:dryrun": "prettier ./*.{js,ts} ./packages/*/{test,src}/**/*.{js,ts}",
@@ -30,6 +32,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint": "^6.8.0",
     "lerna": "^3.20.2",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "typescript": "^3.7.5"
   }
