chore: update the world to appease the linter

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,11 @@
 # ignore __fixtures__ only until we can dogfood our own plugin
 **/__fixtures__/**
 highlight.pack.js
+**/*example*/**
+example-snippet.ts
+lib
+dist
+public
+coverage
+static
+.cache
