--- a/packages/effects-docs/.gitignore
+++ b/packages/effects-docs/.gitignore
@@ -1,11 +1,9 @@
 *.html
 node_modules
 .DS_Store
-src/highlight/**/*css
-src/highlight/**/*jpg
-src/highlight/**/*png
-src/highlight/**/*md
-!solarized-*.css
+
+# used for testing path prefix
+effectsjs
 
 # injected from babel submodule
 babel.js
@@ -15,9 +13,6 @@ babel.js
 
 logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # Runtime data
 pids
