feat: add cname postbuild

--- a/packages/effects-docs/package.json
+++ b/packages/effects-docs/package.json
@@ -28,6 +28,7 @@
     "build:babel:standalone": "cp ../../babel/packages/babel-standalone/babel.js static/",
     "prebuild": "node scripts/reduce-highlight.js",
     "build": "run-s build:babel:standalone && gatsby build --prefix-paths",
+    "postbuild": "echo 'effects.js.org' > public/CNAME",
     "clean": "gatsby clean",
     "serve": "gatsby serve",
     "start": "run-s build:babel:standalone && gatsby develop",
