--- a/packages/effects-docs/src/pages/examples/get-http-resource.js.example
+++ b/packages/effects-docs/src/pages/examples/get-http-resource.js.example
@@ -1,10 +1,3 @@
-function analyzePage () {
-  const url = window.location.href
-  const size = perform { type: 'get_page_size', payload: { url } }
-  const { path: analysisPath } = perform { type: 'flush_analysis', payload: { url, size } }
-  console.info(`analysis { size: ${size}, url: '${url}' } written to: ${analysisPath}`)
-}
-
 function main () {
   'use effects'
   try {
@@ -15,6 +8,15 @@ function main () {
       case 'flush_analysis': flushAnalysis(evt.payload).then(metadata => { recall metadata })
     }
   }
+}
+
+function analyzePage () {
+  const start = Date.now()
+  const url = window.location.href
+  const size = perform { type: 'get_page_size', payload: { url } }
+  const { path: analysisPath } = perform { type: 'flush_analysis', payload: { url, size } }
+  const finish = Date.now()
+  console.info(`{ duration: '${finish - start}ms', size: '${(size/1000).toFixed(2)}kb', url: '${url}' } written to: ${analysisPath}`)
 }
 
 async function getPageSize (url) {
