--- a/packages/effects-docs/src/pages/examples/get-integer.js.example
+++ b/packages/effects-docs/src/pages/examples/get-integer.js.example
@@ -3,10 +3,8 @@ const main = async () => {
   try{
     const integer = perform { type: 'get_int' }
     console.log({ integer, ok: 5 === integer })
-  } handle(e) {
-    if (e.type === 'get_int') {
-        recall 5;
-    }
+  } handle 'get_int' with (e) {
+    recall 5;
   }
 }
 main()
