--- a/packages/effects-docs/package.json
+++ b/packages/effects-docs/package.json
@@ -10,11 +10,13 @@
     "gatsby-image": "2.2.41",
     "gatsby-plugin-google-fonts":"^1.0.1",
     "gatsby-plugin-react-helmet": "3.1.22",
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sharp": "2.4.5",
     "gatsby-plugin-webpack-bundle-analyser-v2": "1.1.8",
     "gatsby-source-filesystem": "2.1.48",
     "gatsby-transformer-remark": "2.6.53",
     "gatsby-transformer-sharp": "2.3.14",
+    "gatsby-plugin-workerize-loader":"^1.1.0",
     "gatsby": "2.19.22",
     "npm-run-all": "^4.1.5",
     "react-ace":"^8.0.0",
