--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -10,12 +10,12 @@ jobs:
         with:
           node-version: 12.16.1
       - name: install
-        run: npm ci && npm run bootstrap
+        run: yarn bootstrap
       - name: lint
-        run: npm run lint
+        run: yarn lint
       - name: init-babel-fork
         run: bash scripts/init-babel.sh
       - name: build
-        run: npm run build
+        run: yarn build
       - name: test
-        run: npm run test
+        run: yarn test
