--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "bootstrap": "yarn && npx lerna bootstrap --loglevel verbose",
+    "bootstrap": "yarn && npx lerna bootstrap --nohoist='*' --loglevel verbose",
     "postbootstrap": "run-s copy:nvmrc",
     "copy:nvmrc": "lerna exec -- cp ../../.nvmrc ./",
     "build": "tsc -b packages && lerna exec --scope effects-docs -- yarn build",
@@ -38,7 +38,12 @@
     "typescript": "^3.7.5"
   },
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ]
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ],
+    "nohoist": [
+      "**"
+    ]
+  }
 }
