--- a/packages/babel-plugin-effects/package.json
+++ b/packages/babel-plugin-effects/package.json
@@ -20,6 +20,7 @@
     "@babel/types": "^7.7.4"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "@types/node": "^12.12.31"
   }
 }
