--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -4,6 +4,7 @@
   "references": [
     { "path": "./effects-runtime" },
     { "path": "./effects-common" },
-    { "path": "./babel-plugin-effects" }
+    { "path": "./babel-plugin-effects" },
+    { "path": "./babel-parser-effects-evil-monkey-patch" }
   ]
 }
