--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "bootstrap": "yarn && npx lerna bootstrap --nohoist='*' --loglevel verbose",
     "postbootstrap": "run-s copy:nvmrc",
     "copy:nvmrc": "lerna exec -- cp ../../.nvmrc ./",
-    "build": "tsc -b packages && lerna exec --scope effects-docs -- yarn build",
+    "compile": "tsc -b packages",
+    "build": "run-s compile build:docs",
+    "build:docs": "lerna exec --scope effects-docs -- yarn build",
     "clean": "del 'packages/*/lib' 'packages/*/*.{tsbuildinfo}' 'packages/*/src/**/*.{map,d.ts}'",
     "format": "prettier './*.{js,ts}' './packages/**/*.{js,ts}' --write",
     "lint:format": "prettier './*.{js,ts}' './packages/**/*.{js,ts}' --check",
