--- a/packages/effects-common/package.json
+++ b/packages/effects-common/package.json
@@ -20,5 +20,9 @@
   "license": "ISC",
   "devDependencies": {
     "npm-run-all": "^4.1.5"
+  },
+  "dependencies": {
+    "babel-plugin-effects": "^0.0.1",
+    "effects-runtime": "^0.0.1"
   }
 }
