wip: prettier-plugin-javascript-effects

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,7 +1,5 @@
 # ignore __fixtures__ only until we can dogfood our own plugin
-**/__fixtures__/**
 highlight.pack.js
-**/*example*/**
 example-snippet.ts
 lib
 dist
@@ -9,3 +7,6 @@ public
 coverage
 static
 .cache
+**/*.ts
+printer-estree-effects.template.js
+printer-estree-effects.bundle.js
