--- a/packages/prettier-plugin-javascript-effects/.gitignore
+++ b/packages/prettier-plugin-javascript-effects/.gitignore
@@ -1,7 +1,7 @@
 src/**/*.d.ts
 src/**/*.map
 src/plugin.js
-src/printer-estree-effects.bundle.js
+src/*.bundle.js
 scripts/*
 !scripts/*.ts
 **.d.ts
