--- a/.prettierignore
+++ b/.prettierignore
@@ -7,6 +7,5 @@ public
 coverage
 static
 .cache
-**/*.ts
-printer-estree-effects.template.js
-printer-estree-effects.bundle.js
+**/*.d.ts
+*.bundle.js
