--- a/packages/prettier-plugin-javascript-effects/package.json
+++ b/packages/prettier-plugin-javascript-effects/package.json
@@ -9,7 +9,7 @@
     "build:watch": "IS_WATCHING=1 run-p 'compile --watch' bundle",
     "bundle": "node scripts/bundle.js",
     "compile": "tsc",
-    "test": "node tests/test.js"
+    "test": "node -r perish tests/test.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "@types/webpack": "^4.41.10",
     "npm-run-all": "^4.1.5",
     "prettier": "https://github.com/prettier/prettier#04e4ef375844b011ab586072ecc97678afe838b4",
-    "webpack": "^4.42.1"
+    "webpack": "^4.42.1",
+    "perish": "^1.0.3"
   }
 }
