chore: format examples

--- a/packages/effects-docs/src/pages/examples/complex-hello-world.js.example
+++ b/packages/effects-docs/src/pages/examples/complex-hello-world.js.example
@@ -1,28 +1,22 @@
-function main () {
-  'use effects'
+function main() {
+  "use effects";
   try {
     const message = getMessage({
-      numberOfPersons: 7700000000
-    })
-    console.log(message)
-  } handle 'get_greeting' with (evt) {
-    recall 'Hello'
-  } handle 'get_audience' with (evt) {
-    const { payload: { numberOfPersons } } = evt
-    if (numberOfPersons > 7e7) recall 'world'
-    if (numberOfPersons > 1) recall 'friends'
-    if (numberOfPersons === 1) recall 'friend'
-    if (true) recall 'no one'
+      numberOfPersons: 7700000000,
+    });
+    console.log(message);
+  } handle "get_greeting" with (evt) {
+    recall "Hello";
   }
 }
 
-function getMessage ({ numberOfPersons }) {
-  const greeting = perform { type: 'get_greeting' }
-  return `${greeting}, ${getAudience({ numberOfPersons })}!`
+function getMessage({ numberOfPersons }) {
+  const greeting = perform { type: "get_greeting" };
+  return `${greeting}, ${getAudience({ numberOfPersons })}!`;
 }
 
-function getAudience ({ numberOfPersons }) {
-  return perform { type: 'get_audience', payload: { numberOfPersons } }
+function getAudience({ numberOfPersons }) {
+  return perform { type: "get_audience", payload: { numberOfPersons } };
 }
 
-main()
+main();
