--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "postbootstrap": "run-s copy:nvmrc",
     "copy:nvmrc": "lerna exec -- cp ../../.nvmrc ./",
     "build": "tsc -b packages && lerna exec --scope effects-docs -- npm run build",
-    "clean": "del 'packages/*/lib' 'packages/*/*.{tsbuildinfo}' 'packages/*/src/**/*.{map,d.ts}'",
+    "clean": "del 'packages/*/lib' 'packages/**/tsconfig.tsbuildinfo' 'packages/*/src/**/*.{map,d.ts}'",
     "format:base": "prettier --plugin=./packages/prettier-plugin-javascript-effects/src/plugin.js './*.{js,ts}' './packages/**/*.{js,ts,example}'",
     "format": "npm run format:base -- --write",
     "lint": "eslint './.?*.js' 'packages/**/*.{js,ts}' && npm run format:base -- --check",
