--- a/.prettierignore
+++ b/.prettierignore
@@ -7,4 +7,4 @@ coverage
 static
 .cache
 **/*.d.ts
-packages/prettier-plugin-javascript-effects/src/*.js
+packages/prettier-plugin-javascript-effects/**/*.js
