--- a/packages/effects-docs/package.json
+++ b/packages/effects-docs/package.json
@@ -4,31 +4,34 @@
   "author": "cdaringe <cdaringe@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@mdx-js/mdx": "^1.5.8",
+    "@mdx-js/react": "^1.5.8",
     "ace-builds": "^1.4.8",
     "babel-plugin-effects": "^0.0.1",
     "effects-runtime": "^0.0.1",
     "gatsby-image": "2.2.41",
     "gatsby-plugin-google-fonts":"^1.0.1",
+    "gatsby-plugin-mdx": "^1.1.9",
     "gatsby-plugin-react-helmet": "3.1.22",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sharp": "2.4.5",
     "gatsby-plugin-webpack-bundle-analyser-v2": "1.1.8",
+    "gatsby-plugin-workerize-loader":"^1.1.0",
+    "gatsby-remark-prismjs": "^3.4.3",
     "gatsby-source-filesystem": "2.1.48",
     "gatsby-transformer-remark": "2.6.53",
     "gatsby-transformer-sharp": "2.3.14",
-    "gatsby-plugin-workerize-loader":"^1.1.0",
     "gatsby": "2.19.22",
     "npm-run-all": "^4.1.5",
+    "prismjs": "^1.20.0",
     "react-ace":"^8.0.0",
     "react-dom": "^16.12.0",
     "react-helmet": "5.2.1",
-    "react-highlight.js": "^1.0.7",
     "react-markdown": "^4.3.1",
     "react": "^16.12.0"
   },
   "scripts": {
     "build:babel:standalone": "cp ../../babel/packages/babel-standalone/babel.js static/",
-    "prebuild": "node scripts/reduce-highlight.js",
     "build": "run-s build:babel:standalone && gatsby build",
     "postbuild": "echo 'effects.js.org' > public/CNAME",
     "clean": "gatsby clean",
