--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
     "del-cli": "^3.0.0",
+    "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react-app": "^6.2.1",
-    "eslint": "^6.8.0",
+    "gh-pages": "^2.2.0",
     "lerna": "^3.20.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.2",
