--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gh-pages": "^2.2.0",
     "lerna": "^3.20.2",
     "npm-run-all": "^4.1.5",
+    "perish": "^1.0.3",
     "prettier": "^2.0.2",
     "typescript": "^3.7.5"
   }
